Avoid usage of google collections